# integritycheck

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  NOTICE  README.md  checksum.cc  checksum.h  cmd_search.cc  cmd_search.h  index.cc  index.h  index_read.cc  main.cc  op_verify.cc  op_verify.h  readme.txt  todo  todo.txt  usage.txt
src/: checksum.rs  index.rs  index_diff.rs  index_scan.rs  main.rs  op.rs  op_acknowledge.rs  op_diff.rs  op_fsck.rs  op_history.rs  op_index.rs  op_init.rs  op_status.rs  op_verify.rs  prompt.rs
test/: assert.h  env.sh  environment.cc  environment.h  generate.cc  generate.h  test-runner.sh  test-search-basic.sh  test-util.sh  test.sh  testcase-ack-invalid-path.sh  testcase-ack-no-changes.sh  testcase-ack-subpath.sh  testcase-corrupted-index.sh  testcase-create-index-then-ack-subpath.sh  testcase-files-with-backslash.sh  testcase-files-with-newlines.sh  testcase-files-with-whitespace.sh  testcase-index-message.sh  testcase-index-outside-repo.sh  testcase-index-with-md5.sh  testcase-index-with-sha256.sh  testcase-init-empty.sh  testcase-log.sh  testcase-rename-multi-empty-same_mtime.sh  testcase-rename-multi-empty.sh  testcase-rename-multi-same_checksum-same_mtime.sh  testcase-rename-multi-same_checksum.sh  testcase-rename-multi.sh  testcase-rename-simple.sh  testcase-status.sh  testcase-verify.sh
test/disabled/: testcase-ack-invalid-path.sh  testcase-ack-no-changes.sh  testcase-ack-subpath.sh  testcase-corrupted-index.sh  testcase-files-with-backslash.sh  testcase-files-with-newlines.sh  testcase-files-with-whitespace.sh  testcase-index-message.sh  (+14 more)
(+13 files in other folders)
