[package]
name = "integritycheck"
version = "0.8.1"
authors = ["Paul Asmuth <paul@asmuth.com>"]
repository = "https://github.com/asmuth/integritycheck"
description = "Yet another file integrity monitoring tool"
license = "Apache-2.0"

[dependencies]
rust-crypto = "*"
getopts = "*"
libc = "*"
regex = "*"
walkdir = "*"
colored = "1.6"
deflate = "*"
inflate = "*"
time = "*"
